kustomizations/automation/buzzkit/cache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buzzkit-valkey
  labels:
    app: buzzkit-valkey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: buzzkit-valkey
  template:
    metadata:
      labels:
        app: buzzkit-valkey
    spec:
      serviceAccountName: buzzkit
      containers:
      - name: valkey
        image: valkey/valkey:latest
        args:
          - "--save"
          - ""
          - "--appendonly"
          - "no"
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 10m
            memory: 64Mi
          limits:
            cpu: 50m
            memory: 128Mi
