kustomizations/automation/buzzkit/cache-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: buzzkit-valkey
spec:
  selector:
    app: buzzkit-valkey
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
