kustomizations/automation/buzzkit/database-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: buzzkit-postgresql
  labels:
    app.kubernetes.io/name: buzzkit-postgresql
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app.kubernetes.io/name: buzzkit-postgresql
