kustomizations/automation/buzzkit/server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: buzzkit
  namespace: media
spec:
  ports:
    - port: 2785
      targetPort: 2785
      protocol: TCP
  selector:
    app: buzzkit-api
